feat: SJRA-1906 add new table for assignees
